--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-  "name": "Hasura GraphQL Engine",
+  "name": "Electoraid Hasura GraphQL Engine",
   "description": "Blazing fast, instant realtime GraphQL APIs on Postgres with fine grained access control and webhook triggers for async business logic.",
   "logo": "https://storage.googleapis.com/hasura-graphql-engine/console/assets/favicon.png",
   "keywords": [
@@ -22,7 +22,7 @@
   "stack": "container",
   "addons": [
     {
-      "plan": "heroku-postgresql:hobby-dev"
+      "plan": "heroku-postgresql:standard-0"
     }
   ]
 }
